# getmarcapi

./: .buildinfo  .coveragerc  .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  Jenkinsfile  MANIFEST.in  README.md  README.rst  deployment.html  development.html  docker-compose-traefik.yml  docker-compose.yml  genindex.html  index.html  objects.inv  package-lock.json  package.json  pyproject.toml  requirements-ci.txt  requirements-deploy.txt  requirements-dev.txt  requirements-develop.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sonar-project.properties  tox.groovy  tox.ini  webpack.config.js
.doctrees/: deployment.doctree  development.doctree  environment.pickle  index.doctree
.github/workflows/: build-and-deploy-dev.yml  documentation.yml  tox_matrix.yml
ci/docker/python/linux/: Dockerfile
ci/docker/python/shared/: .pypirc  requirements-ci.txt
ci/docker/python/tox/: Dockerfile  apt-packages.txt
ci/jenkins/: README.rst  config.json  plugins.txt
ci/jenkins/casc/: jenkins.yml
ci/jenkins/scripts/: devpi.groovy  tox.groovy
docs/: conf.py  deployment.rst  development.rst  index.rst  make.bat  spelling_wordlist.txt
getmarcapi/: __init__.py  __main__.py  app.py  config.py  records.py
getmarcapi/templates/: info.html  layout.html
requirements/: requirements-ci-freeze.txt  requirements-ci.txt  requirements-deploy.txt  requirements-dev-freeze.txt  requirements-dev.txt  requirements.txt
src/: index.js
tests/: test_api.py  test_app.py  test_config.py  test_records.py
vars/: runJenkinsPipeline.groovy
