[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getmarcapi"
version = "0.0.4.dev0"
dependencies = [
    'flask',
    'uiucprescon.getmarc2>=0.1.3',
    'typing-extensions;python_version<"3.8"'
]
readme = "README.rst"
license = {text = "University of Illinois/NCSA Open Source License"}
authors = [
    {name = "University Library at The University of Illinois at Urbana Champaign: Preservation Services", email = "prescons@library.illinois.edu"},
]
maintainers = [
    {name = "Henry Borchers", email = "hborcher@illinois.edu"}
]
description = "Provide MARC XML data"

[project.urls]
Download = "https://github.com/UIUCLibrary/"

[tool.setuptools]
packages = [
    "getmarcapi",
]
include-package-data = true
zip-safe = true

[[tool.mypy.overrides]]
module = 'uiucprescon'
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--verbose -s"
testpaths = [
    "tests"
]
junit_family="xunit2"
