[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getmarcapi"
version = "0.0.6.dev0"
dependencies = [
    'flask',
    'uiucprescon.getmarc2>=0.1.5',
    'typing-extensions;python_version<"3.8"'
]
requires-python = ">= 3.10"
readme = "README.rst"
license = "NCSA"
authors = [
    {name = "University Library at The University of Illinois at Urbana Champaign: Preservation Services", email = "prescons@library.illinois.edu"},
]
maintainers = [
    {name = "Henry Borchers", email = "hborcher@illinois.edu"}
]
description = "Provide MARC XML data"
[dependency-groups]
audit-dependencies = ['uv-secure']
deploy = ['gunicorn', 'python-dotenv']
test = ['pytest']
tox = ["tox"]
publish = ["twine"]
docs = ["sphinx", "sphinxcontrib.spelling"]
dev = [
    "bandit",
    "coverage",
    "flake8",
    "lxml-stubs",
    "mypy",
    "paramiko",
    "pydocstyle",
    "pylint",
    {include-group = "docs"},
    {include-group = "publish"},
    {include-group = "test"},
    {include-group = "tox"},
    {include-group = "audit-dependencies"},
]
ci = ["pysonar", {include-group = "dev"}]

[project.urls]
Download = "https://github.com/UIUCLibrary/"

[tool.setuptools]
packages = [
    "getmarcapi",
    "getmarcapi.templates"
]
include-package-data = true
zip-safe = true

[[tool.mypy.overrides]]
module = 'uiucprescon'
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--verbose -s"
testpaths = [
    "tests"
]
junit_family="xunit2"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "uiuc_prescon_python"
url = "https://nexus.library.illinois.edu/repository/uiuc_prescon_python/simple"
explicit = true

[tool.uv.sources]
"uiucprescon-getmarc2" = {index="uiuc_prescon_python"}
