[metadata]
name = getmarcapi
version = 0.0.2
url = https://github.com/UIUCLibrary/
download_url = https://github.com/UIUCLibrary/
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Provide MARC XML data
long_description = file: README.md
license = University of Illinois/NCSA Open Source License
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu

[options]
zip_safe = True

[tool:pytest]
testpaths = tests
addopts = --verbose -s
junit_family=xunit2

[mypy-uiucprescon]
ignore_missing_imports = True

[aliases]
test=pytest

